dashboard: fixed gap issue in reviews (avis)

--- a/back-end/public/css/dashboard.css
+++ b/back-end/public/css/dashboard.css
@@ -770,7 +770,7 @@ body {
 .avis {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 3.5rem;
 }
 .review {
   border-radius: 29px;
